--- a/TwsPluginShareLib/res/layout-v4/time_picker.xml
+++ b/TwsPluginShareLib/res/layout-v4/time_picker.xml
@@ -20,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:focusable="true"
+        android:layout_marginLeft="12dp"
         android:focusableInTouchMode="true" />
 
     <!-- minute -->
@@ -27,7 +28,7 @@
         android:id="@+id/minute"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="48dp"
+        android:layout_marginLeft="@dimen/time_picker_child_margin_left"
         android:focusable="true"
         android:focusableInTouchMode="true" />
 
