--- a/TwsPluginHost/res/drawable/dm_common_single_item_selector.xml
+++ b/TwsPluginHost/res/drawable/dm_common_single_item_selector.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
 
-	<item android:state_focused="true"  android:drawable="@color/tws_black_alpha_mini" />
-	<item android:state_pressed="true"  android:drawable="@color/tws_black_alpha_mini" />	
+	<item android:state_focused="true"  android:drawable="@drawable/list_focused_holo_light" />
+	<item android:state_pressed="true"  android:drawable="@drawable/list_selector_disabled_holo_light" />	
 	<!-- normal -->
-	<item android:drawable="@color/tws_white"></item>
+	<item android:drawable="@drawable/list_selector_background_transition_holo_light"></item>
 </selector>
