--- a/TwsPluginDemo/res/layout/plugin_launcher.xml
+++ b/TwsPluginDemo/res/layout/plugin_launcher.xml
@@ -12,13 +12,13 @@
             android:id="@+id/test_base"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="点击进入测试框架基础能力" />
+            android:text="框架基础能力" />
 
         <Button
             android:id="@+id/test_ShareWidget"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="点击进入测试共享控件" />
+            android:text="共享控件" />
 
         <Button
             android:id="@+id/test_actionbar"
