--- a/TwsPluginShareLib/res/layout-v4/tws_alert_dialog_holo.xml
+++ b/TwsPluginShareLib/res/layout-v4/tws_alert_dialog_holo.xml
@@ -14,7 +14,7 @@
 ** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ** See the License for the specific language governing permissions and
 ** limitations under the License. 
-*/
+*/
 -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -24,9 +24,9 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="16dip"
     android:layout_marginRight="16dip"
+    android:background="@drawable/dialog_bg"
     android:minWidth="300dp"
-    android:orientation="vertical"
-    android:background="@drawable/dialog_bg">
+    android:orientation="vertical" >
 
     <LinearLayout
         android:id="@id/topPanel"
@@ -53,9 +53,9 @@
                 android:id="@id/titleLinear"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_marginLeft="@dimen/tws_listview_item_padding_side_left"   
+                android:layout_marginLeft="@dimen/tws_listview_item_padding_side_left"
                 android:layout_marginRight="@dimen/tws_listview_item_padding_side_right"
+                android:layout_weight="1"
                 android:gravity="center_vertical|center_horizontal"
                 android:orientation="horizontal" >
 
@@ -104,14 +104,14 @@
             android:id="@id/scrollView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-			tws:maxHeight="@dimen/dialog_content_maxheight"
-            android:clipToPadding="true" >
+            android:clipToPadding="true"
+            tws:maxHeight="@dimen/dialog_content_maxheight" >
 
             <LinearLayout
                 android:id="@id/messageLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/tws_listview_item_padding_side_left"   
+                android:layout_marginLeft="@dimen/tws_listview_item_padding_side_left"
                 android:layout_marginRight="@dimen/tws_listview_item_padding_side_right"
                 android:layout_marginTop="0dip"
                 android:gravity="center_vertical|left"
@@ -128,23 +128,23 @@
                 <TextView
                     android:id="@id/message"
                     style="?attr/textAppearanceMedium"
-                    android:textSize="@dimen/tws_Medium_TextSize"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:lineSpacingExtra="3dip"
                     android:paddingBottom="20dip"
-            		android:paddingTop="16dip"
-                    android:lineSpacingExtra="3dip" />
+                    android:paddingTop="16dip"
+                    android:textSize="@dimen/tws_Medium_TextSize" />
             </LinearLayout>
         </com.tencent.tws.assistant.widget.TwsScrollView>
     </LinearLayout>
 
-    <LinearLayout 
+    <LinearLayout
         android:id="@id/customPanel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:clipChildren="false"
         android:clipToPadding="false"
-        android:layout_weight="1"
         android:minHeight="60dip"
         android:orientation="vertical" >
 
@@ -154,9 +154,9 @@
             android:layout_height="wrap_content"
             android:clipChildren="false"
             android:clipToPadding="false"
+            android:paddingBottom="10dip"
             android:paddingLeft="20dip"
             android:paddingRight="20dip"
-            android:paddingBottom="10dip"
             android:paddingTop="10dip" />
     </LinearLayout>
 
