--- a/TwsPluginShareLib/res/values-v4/colors.xml
+++ b/TwsPluginShareLib/res/values-v4/colors.xml
@@ -59,6 +59,8 @@
     <color name="tws_alert">#FD2F2F</color>
     <!-- 用于高亮、进度、健康图标等(绿色) -->
     <color name="tws_light">#00BB00</color>
+    <!-- 标题、列表底部等分割用 -->
+    <color name="tws_divider_bg">#CCCCCC</color>
     
     <color name="tws_dark_gray">#515151</color>
     <drawable name="transparent_background">@color/transparent</drawable>
