--- a/TwsPluginHost/res/layout/activity_message_manager.xml
+++ b/TwsPluginHost/res/layout/activity_message_manager.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="#ff33b5e5"
+        android:background="@color/tws_view_bg"
         android:orientation="vertical"
         android:padding="16dp" >
 
