befor Adaptation of 7.1

--- a/TwsPluginDemo/res/layout/activity_test_share_widget.xml
+++ b/TwsPluginDemo/res/layout/activity_test_share_widget.xml
@@ -63,6 +63,13 @@
             android:layout_height="50dp"
             android:layout_margin="3dp"
             android:text="ListView" />
+
+        <Button
+            android:id="@+id/twsbutton_samples"
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:layout_margin="3dp"
+            android:text="TwsButton" />
     </LinearLayout>
 
 </ScrollView>
