--- a/TwsPluginShareLib/src/main/res/values-v4/dimens.xml
+++ b/TwsPluginShareLib/src/main/res/values-v4/dimens.xml
@@ -212,4 +212,10 @@
     <dimen name="profile_picker_child_margin_left">64dp</dimen>
     <dimen name="time_picker_child_margin_left">64dp</dimen>
     <dimen name="time_picker_nounit_child_margin_left">96dp</dimen>
+
+    <!---->
+    <dimen name="tws_dialog_positive_button_size">16sp</dimen>
+    <dimen name="tws_dialog_negative_button_size">16sp</dimen>
+    <dimen name="tws_dialog_message_text_size">14sp</dimen>
+
 </resources>
