--- a/TwsPluginHost/src/main/res/layout/activity_home.xml
+++ b/TwsPluginHost/src/main/res/layout/activity_home.xml
@@ -15,6 +15,13 @@
         android:id="@+id/home_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/home_bottom_tab" />
+        android:layout_above="@id/home_bottom_tab" >
+
+        <Button
+            android:id="@+id/btn_test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/debug_plugin_framework" />
+    </FrameLayout>
 
 </RelativeLayout>
