dill demo（can run）

--- a/TwsPluginDemo/src/main/res/layout/plugin_layout.xml
+++ b/TwsPluginDemo/src/main/res/layout/plugin_layout.xml
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:text="@string/hello_world4" />
 
-        <com.tencent.tws.sharelib.ShareLayout
+        <com.rick.tws.share.widget.ShareLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@color/light_btn_normal_color" />
