--- a/TwsPluginDemo/src/main/res/layout/plugin_launcher.xml
+++ b/TwsPluginDemo/src/main/res/layout/plugin_launcher.xml
@@ -1,12 +1,13 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:paddingTop="25dp">
 
         <Button
             android:id="@+id/test_plugincore"
