--- a/TwsPluginHost/src/main/res/values/dimens.xml
+++ b/TwsPluginHost/src/main/res/values/dimens.xml
@@ -44,4 +44,6 @@
 
     <!---->
     <dimen name="item_padding">20dp</dimen>
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 </resources>
