--- a/TwsPluginShareLib/src/main/res/layout/toolbar.xml
+++ b/TwsPluginShareLib/src/main/res/layout/toolbar.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.animaconnected.secondo.screens.AnimatedToolbar
+<com.rick.tws.widget.AnimatedToolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
@@ -25,4 +25,4 @@
         android:layout_gravity="center_vertical|right"
         android:textSize="14dp"/>
 
-</com.animaconnected.secondo.screens.AnimatedToolbar>
+</com.rick.tws.widget.AnimatedToolbar>
