--- a/TwsPluginHost/src/main/res/layout/activity_message_manager.xml
+++ b/TwsPluginHost/src/main/res/layout/activity_message_manager.xml
@@ -2,14 +2,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:fillViewport="true" >
+    android:fillViewport="true">
+
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@color/tws_view_bg"
-        android:orientation="vertical"
-        android:padding="26dp" >
+        android:orientation="vertical">
+
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar" />
 
         <Button
             android:id="@+id/send_notification"
