--- a/TwsPluginShareLib/src/main/res/values/styles.xml
+++ b/TwsPluginShareLib/src/main/res/values/styles.xml
@@ -1,18 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Tws.Theme.Light.Base" parent="Theme.AppCompat.Light">
-        <item name="windowNoTitle">true</item>
+    <style name="Tws.Theme.Light" parent="Theme.AppCompat.Light">
         <item name="windowActionBar">false</item>
-    </style>
-
-    <style name="Tws.Theme.Light" parent="Tws.Theme.Light.Base">
-        <item name="android:windowContentTransitions">true</item>
-        <item name="android:windowAllowEnterTransitionOverlap">true</item>
-        <item name="android:windowAllowReturnTransitionOverlap">true</item>
-        <item name="android:windowSharedElementEnterTransition">@android:transition/move</item>
-        <item name="android:windowSharedElementExitTransition">@android:transition/move</item>
+        <item name="windowNoTitle">true</item>
         <item name="android:windowBackground">?android:windowBackground</item>
-        <item name="android:colorEdgeEffect">?attr/colorAccent</item>
     </style>
 
     <!-- Themes -->
