--- a/TwsPluginShareLib/src/main/res/layout/toolbar.xml
+++ b/TwsPluginShareLib/src/main/res/layout/toolbar.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.rick.tws.widget.AnimatedToolbar xmlns:android="http://schemas.android.com/apk/res/android"
+<com.rick.tws.widget.TwsToolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
@@ -26,4 +26,4 @@
         android:textSize="@dimen/tws_small_textSize"
         android:visibility="gone" />
 
-</com.rick.tws.widget.AnimatedToolbar>
+</com.rick.tws.widget.TwsToolbar>
