--- a/TwsPluginShareLib/src/main/res/values/styles.xml
+++ b/TwsPluginShareLib/src/main/res/values/styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="Tws.Theme.Light" parent="Theme.AppCompat.Light">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
@@ -9,8 +10,8 @@
     <!-- Themes -->
     <style name="Tws.Theme.Secondo" parent="Tws.Theme.Light">
         <item name="android:windowBackground">@color/tws_window_background</item>
-
         <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
 </resources>
