--- a/TwsPluginBluetooth/src/main/res/layout/activity_main.xml
+++ b/TwsPluginBluetooth/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!" />
+            android:text="TwsPluginFramework Main Activity" />
     </LinearLayout>
 
 </ScrollView>
