--- a/TwsPluginBluetooth/src/main/res/values/colors.xml
+++ b/TwsPluginBluetooth/src/main/res/values/colors.xml
@@ -8,4 +8,42 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <!-- common color -->
+    <color name="colorTransparent">#00000000</color>
+    <color name="kronaby_black">#ff000000</color>
+    <color name="kronaby_white">#ffffffff</color>
+    <color name="kronaby_blue">#ff22b2b6</color>
+    <!-- ====================black==================== -->
+    <!-- 80% alpha black -->
+    <color name="kronaby_black_alpha_supperbig">#CC000000</color>
+    <!-- 70% alpha black -->
+    <!-- 60% alpha black -->
+    <!-- 50% alpha black -->
+    <color name="kronaby_black_alpha_large">#80000000</color>
+    <!-- 30% alpha black -->
+    <color name="kronaby_black_alpha_medium">#4D000000</color>
+    <!-- 20% alpha black -->
+    <color name="kronaby_black_alpha_micro">#33000000</color>
+    <!-- 10% alpha black -->
+    <color name="kronaby_black_alpha_mini">#1A000000</color>
+    <!-- 45% alpha black -->
+    <!-- 40% alpha black -->
+    <!-- 15% alpha black -->
+    <!-- ====================white</color>==================== -->
+    <!-- 80% alpha white -->
+    <color name="kronaby_white_alpha_supperbig">#CCffffff</color>
+    <!-- 70% alpha white -->
+    <!-- 60% alpha white -->
+    <!-- 50% alpha white -->
+    <!-- 30% alpha white -->
+    <!-- 20% alpha white -->
+    <!-- 10% alpha white -->
+    <color name="kronaby_white_alpha_mini">#1A000000</color>
+    <!-- 45% alpha white -->
+    <!-- 40% alpha white -->
+    <!-- 25% alpha white -->
+    <!-- 15% alpha white -->
+
+    <color name="textColorPairContent">@color/kronaby_black_alpha_large</color>
 </resources>
