--- a/TwsPluginBluetooth/src/main/res/values/styles.xml
+++ b/TwsPluginBluetooth/src/main/res/values/styles.xml
@@ -1,3 +1,56 @@
 <resources>
 
+
+    <style name="Secondo.TextAppearance" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Secondo.TextAppearance.Body" parent="Secondo.TextAppearance">
+        <!--原来是16sp 配对界面内容大文字使用 修改为14sp-->
+        <item name="android:textColor">@color/textColorPairContent</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="Secondo.TextAppearance.Title2" parent="Secondo.TextAppearance">
+        <!--原来是24sp 配对界面内容大文字使用 修改为18sp-->
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="Base.TextAppearance.AppCompat" parent="android:TextAppearance">
+        <item name="android:textColor">?android:textColorPrimary</item>
+        <item name="android:textColorHint">?android:textColorHint</item>
+        <item name="android:textColorHighlight">?android:textColorHighlight</item>
+        <item name="android:textColorLink">?android:textColorLink</item>
+        <item name="android:textSize">@dimen/abc_text_size_body_1_material</item>
+    </style>
+
+    <style name="Base.TextAppearance.AppCompat.Button">
+        <item name="android:textSize">@dimen/abc_text_size_button_material</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">?android:textColorPrimary</item>
+    </style>
+
+    <style name="TextAppearance.AppCompat.Button" parent="Base.TextAppearance.AppCompat.Button" />
+
+    <style name="Secondo.Button" parent="">
+        <item name="android:background">@drawable/button_default</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Button</item>
+        <item name="android:minHeight">48dip</item>
+        <item name="android:minWidth">244dip</item>
+        <item name="android:focusable">true</item>
+        <item name="android:clickable">true</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:gravity">center_vertical|center_horizontal</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+    <style name="Secondo.Button.black" parent="Secondo.Button">
+        <item name="android:background">@drawable/button_black_bg_style</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+    </style>
 </resources>
